<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="end|right"
    android:background="@color/black"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/drawerll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="end|right"
        android:background="@color/menu_bg_color"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/dear_user_text_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/menu_bg_color"
            android:orientation="horizontal"
            android:padding="20dp">

            <LinearLayout
                android:id="@+id/name_text_layout"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:gravity="left"
                android:orientation="vertical">

                <com.wudstay.views.CustomTextView
                    android:id="@+id/home_menu_UserName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left|center_vertical|start"
                    android:layout_margin="5dp"
                    android:text="Arpit"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_size_drawer_fragment" />

                <com.wudstay.views.CustomTextView
                    android:id="@+id/home_menu_MyAcc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left|center_vertical|start"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="5dp"
                    android:text="Edit"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_size_drawer_fragment" />

            </LinearLayout>

            <com.wudstay.views.CircularImageView
                android:id="@+id/home_menu_UserImage"
                android:layout_width="@dimen/image_width_drawer_fragment"
                android:layout_height="@dimen/image_width_drawer_fragment"
                android:layout_gravity="right|end"
                android:layout_marginLeft="10dp"
                android:src="@mipmap/logo" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="@color/nav_drawer_divider" />

        <LinearLayout
            android:id="@+id/home_menu_option"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            android:padding="10dp">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.2"
                android:gravity="center_horizontal"
                android:orientation="horizontal"
                android:visibility="gone">

                <ImageView
                    android:id="@+id/home_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left|center_vertical|start"
                    android:padding="5dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.8"
                android:orientation="horizontal">

                <com.wudstay.views.CustomTextView
                    android:id="@+id/home_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left|center_vertical|start"
                    android:layout_marginLeft="10dp"
                    android:text="@string/home"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_size_drawer_fragment" />
            </LinearLayout>
        </LinearLayout>


        <LinearLayout
            android:id="@+id/notification_menu_option"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="10dp">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.2"
                android:gravity="center_horizontal"
                android:orientation="horizontal"
                android:visibility="gone">

                <ImageView
                    android:id="@+id/notification_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left|center_vertical|start"
                    android:padding="5dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.8"
                android:orientation="horizontal">

                <com.wudstay.views.CustomTextView
                    android:id="@+id/notification_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left|center_vertical|start"
                    android:layout_marginLeft="10dp"
                    android:text="@string/notifications"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_size_drawer_fragment" />

            </LinearLayout>

        </LinearLayout>


        <LinearLayout
            android:id="@+id/payment_menu_option"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="10dp">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.2"
                android:gravity="center_horizontal"
                android:orientation="horizontal"
                android:visibility="gone">

                <ImageView
                    android:id="@+id/payment_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left|center_vertical|start"
                    android:padding="5dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.8"
                android:orientation="horizontal">

                <com.wudstay.views.CustomTextView
                    android:id="@+id/payment_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left|center_vertical|start"
                    android:layout_marginLeft="10dp"
                    android:text="@string/payments"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_size_drawer_fragment" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/talk_menu_option"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="10dp">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.2"
                android:gravity="center_horizontal"
                android:orientation="horizontal"
                android:visibility="gone">

                <ImageView
                    android:id="@+id/talk_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left|center_vertical|start"
                    android:padding="5dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.8"
                android:orientation="horizontal">

                <com.wudstay.views.CustomTextView
                    android:id="@+id/talk_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left|center_vertical|start"
                    android:layout_marginLeft="10dp"
                    android:text="@string/need_to_talk"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_size_drawer_fragment" />
            </LinearLayout>
        </LinearLayout>


        <LinearLayout
            android:id="@+id/complaint_menu_option"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="10dp">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.2"
                android:gravity="center_horizontal"
                android:orientation="horizontal"
                android:visibility="gone">

                <ImageView
                    android:id="@+id/complaint_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left|center_vertical|start"
                    android:padding="5dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.8"
                android:orientation="horizontal">

                <com.wudstay.views.CustomTextView
                    android:id="@+id/complaint_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left|center_vertical|start"
                    android:layout_marginLeft="10dp"
                    android:text="@string/complaint"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_size_drawer_fragment" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/settings_menu_option"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="10dp">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.2"
                android:gravity="center_horizontal"
                android:orientation="horizontal"
                android:visibility="gone">

                <ImageView
                    android:id="@+id/settings_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left|center_vertical|start"
                    android:padding="5dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.8"
                android:orientation="horizontal">

                <com.wudstay.views.CustomTextView
                    android:id="@+id/settings_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left|center_vertical|start"
                    android:layout_marginLeft="10dp"
                    android:text="@string/setting"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_size_drawer_fragment" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>